# xinhua-zhaodao

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  image.py  index.html  styles.css
.github/workflows/: Rust-OS-check.yml  app-check.yml  bin-release.yml  release_bin.yml  rust.yml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
