[package]
name = "xinhua"
version = "0.0.0"
authors = ["Coddeus"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "*"
image = "*"
piston = "*"
piston_window = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
pistoncore-glutin_window = "*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
